app/assets/stylesheets/display.scss
@import 'variables';

// ====== //
// Normal //
// ====== //
a {
    color: $light-purple;
}

span {
    color: $light-purple;

    &.button {
        font-weight: bold;
        text-decoration: none;
        background-color: $dark-purple;
        padding: 0 6px 0 6px;
        border: 1px solid #cccccc;
        border-right-color: #333333;
        border-bottom-color: #333333;

        &:hover {
            color: white;
            background-color: $light-purple;
            cursor: pointer;
        }

        &:active {
            // Invert colors - gives the illusion of a depressed button
            border-right-color: #cccccc;
            border-bottom-color: #cccccc;
            border-left-color: #333333;
            border-top-color: #333333;
        }
    }

    &.button-inactive {
        @extend .button;
        opacity: 0.5;
        color: $dark-purple;
        background-color: $dark-gray;
        pointer-events: none;
    }

    &.button-active {
        @extend .button;
        color: white;
        background-color: $light-purple;
        pointer-events: none;
    }
}

body {
    color: $purple;
    background-color: $abyss;
    font-family: arial;
}

body, html {
    height: 100%;

    &.noscroll {
        overflow-y: hidden;
    }
}

h1 {
    color: $light-purple;
}

h3 {
    color: $light-purple;
}

select {
    color: white;
    background-color: $light-purple;
}

select option {
    color: $light-purple;
    background-color: $dark-purple;

    &:hover {
        @extend select
    }
}

#chat-container {
    flex-basis: 340px;
    flex-grow: 1;
    flex-shrink: 0;

    display: flex;
    flex-direction: column;

    border: 0px;
    border-left: 2px solid $light-purple;

    > iframe {
        flex-basis: 100%;
        flex-grow: 1;
        flex-shrink: 0;

        border: 0px;
    }
}

#main-container {
    min-height: 100%;
    display: flex;
    display: -ms-flexbox;
    flex-direction: column;
}

#main-stream {
    flex-basis: auto;
    flex-grow: 1;
    flex-shrink: 0;

    border: 2px solid $light-purple;
}

#main-stream-player {
    flex-basis: 274px;
    flex-grow: 6;
    flex-shrink: 0;

    border: 0px;
}



#stream-queue {
    border: 2px solid $light-purple;
    border-top: 0px;
    flex-wrap: nowrap;
    overflow-x: auto;
    overflow-y: hidden;

    > iframe {
        border: 0px;
        border-left: 1px solid $light-purple;
        border-right: 1px solid $light-purple;

        &:nth-child(1) {
            border-left: 0px;
        }

        &:nth-last-child(1) {
            border-right: 0px;
        }
    }
}

#stream-switch-tabs {
    flex-basis: auto;
    flex-grow: 0;
    flex-shrink: 0;
    margin-left: 0px;
    margin-right: 0px;

    > div {
        // "Switch to..." text
        &:nth-child(1) {
            flex-basis: auto;
            flex-grow: 0;
            flex-shrink: 0;
            padding: 0 5px 0 5px;
        }

        // Streamer buttons
        &:nth-child(2) {
            flex-basis: auto;
            flex-grow: 1;
            flex-shrink: 1;
            flex-wrap: wrap;
        }

        // Menu
        &:nth-child(3) {
            flex-basis: auto;
            flex-grow: 0;
            flex-shrink: 0;
            padding: 0 5px 0 5px;
        }
    }
}



.beta {
    color: $light-purple;
}

// Flexbox stuff
.flex_row {
    display: flex;
    flex-direction: row;
    margin-left: 0;
    margin-right: 0;
}

.flex_wrap {
    flex-wrap: wrap;
}

.on-deck-stream {
    flex: 0 0 auto;
}

::-webkit-scrollbar {
    color: $purple;
    background-color: $purple;
}

::-webkit-scrollbar-track {
    color: $dark-purple;
    background-color: $dark-purple;
}

::-webkit-scrollbar-thumb {
    color: $light-purple;
    background-color: $light-purple;
    border-radius: 100px;
}

// ==================================================================== //
// Theater mode - Main stream and chat only. All other streamers hidden //
// ==================================================================== //
.theater {
    &#chat-container {
        &:not(.hide_chat) {
            flex-basis: 340px;
            flex-grow: 0;
            flex-shrink: 0;
        }
    }

    &#stream-queue {
        display: none;
    }

}
// ========= //
// Hide Chat //
// ========= //
.hide_chat {
    &#chat-container {
        display: none;
    }
}
// ====================================== //
// Two Streamers - 50/50 horizontal split //
// ====================================== //
.split_two {

}
// ========================================== //
// Three Streamers - 50/25/25 split, two rows //
// ========================================== //
.split_three {

}
// ================================================== //
// Four Streamers - 25/25/25/25 split, four quadrants //
// ================================================== //
.split_four {

}

